src/snapshots/mylang__parser__tests__parse_bang_equal.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
- Expr:
    expr:
      Binary:
        left:
          Literal:
            value:
              Number: 1
        op:
          type: BangEqual
          lexeme: "!="
          literal: ~
          line: 1
        right:
          Literal:
            value:
              Number: 2
