src/snapshots/mylang__parser__tests__parse_false.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
Literal:
  value:
    Bool: false
