src/snapshots/mylang__parser__tests__parse_gt.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
- Expr:
    expr:
      Binary:
        left:
          Literal:
            value:
              Number: 1
        op:
          type: Greater
          lexeme: ">"
          literal: ~
          line: 1
        right:
          Literal:
            value:
              Number: 2
