src/snapshots/mylang__parser__tests__parse_le.snap
---
source: src/parser.rs
expression: "Parse::<Expr>::parse(&mut parser).unwrap()"
---
Binary:
  left:
    Literal:
      value:
        Number: 1
  op:
    type:
      Op: Le
    loc:
      line: 1
      col: 2
    len: 2
    value: ~
  right:
    Literal:
      value:
        Number: 2
