src/snapshots/mylang__parser__tests__parse_nil.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
- Expr:
    expr:
      Literal:
        value: Nil
