src/snapshots/mylang__parser__tests__parse_true.snap
---
source: src/parser.rs
expression: parser.parse().unwrap()
---
- Expr:
    expr:
      Literal:
        value:
          Bool: true
